[add] upload files

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -38,6 +38,9 @@
     <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="../bower_components/ngstorage/ngStorage.js"></script>
 
+    <script src="../bower_components/ng-file-upload-shim/angular-file-upload-shim.min.js"></script> <!-- for no html5 browsers support -->
+    <script src="../bower_components/ng-file-upload/angular-file-upload.min.js"></script> 
+
     <script src="../js/app.js"></script>
     <script src="../js/filters/main.js"></script>
     <script src="../js/directives/main.js"></script>
