--- a/public/views/templates/edit_card.html
+++ b/public/views/templates/edit_card.html
@@ -49,7 +49,7 @@
                             <div ng-repeat="task in subTasks track by $index" class="task-component">
                                 <div class="task-type" style="background-color: {{getTaskColor(task.status.id)}}"></div>
                                 <input class="pull-left" type="checkbox" ng-click="changeTaskStatus(task, status_val)" ng-model="status_val" ng-checked="task.status.id == 14">
-                                    <div class="pull-left" onaftersave="updateTask(task)" editable-text="task.subject" e-form="textBtnForm"> <accordion-group heading="{{task.subject}}">priority: {{task.priority.name}}<br>assigned to: 
+                                    <div class="pull-left" onaftersave="updateTask(task)"  editable-text="task.subject" e-form="textBtnForm"> <accordion-group heading="{{task.subject}}" style="{{getlineThroughState(task.status.id)}}">priority: {{task.priority.name}}<br>assigned to: 
 
                                         <a href="#" onaftersave="updateTask(task)" editable-select="task.assigned_to_id" e-ng-options="m.id as m.name for m in projectMembers">
                                                 {{ showName(task) }}
