--- a/public/views/templates/view.html
+++ b/public/views/templates/view.html
@@ -15,7 +15,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Available Status Lists<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li ng-repeat="widget in widgets track by $index">
-                        <span>{{widget.title}}  <input type="checkbox" ng-model="widget.allowed"></span>
+                        <span>{{widget.title}}  <input type="checkbox" ng-change="addNewAllowedStatus($index, widget.allowed)" ng-model="widget.allowed"></span>
                     </li>
                   </ul>
                 </li>
