--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,6 +17,7 @@
 
     <link href="../assets/stylesheets/style.css" rel="stylesheet" />
     <link href="../assets/stylesheets/card.css" rel="stylesheet" />
+    <link href="../assets/stylesheets/font-awesome.min.css" rel="stylesheet" />
 
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/jquery-ui/jquery-ui.js"></script>
@@ -50,6 +51,8 @@
     <script src="../js/controllers/custom_widget.js"></script>
     <script src="../js/controllers/widget_settings.js"></script>
     <script src="../js/controllers/crud_card.js"></script>
+    <script src="../js/custom.js"></script>
+    
 </head>
 
 <body ng-app="trelloRedmine">
