--- a/public/views/templates/home.html
+++ b/public/views/templates/home.html
@@ -1,44 +1,46 @@
- <div ng-controller="DashboardCtrl">
-        <link rel="stylesheet" ng-href="{{ styleUrl }}" />
-
-        <div class="navbar navbar-inverse">
-            <ul class="nav navbar-nav navbar-left">
-                <li class="dropdown" ng-class="{active: page == 'trello'}">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{current_project.project.name}} <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li ng-repeat="project in user_projects track by $index">
-                        <a ng-href="/trello/{{project.project.id}}">{{project.project.name}}</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Available Status Lists<span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li ng-repeat="widget in widgets track by $index">
-                        <span>{{widget.title}}  <input type="checkbox" ng-change="addNewAllowedStatus($index, widget.allowed)" ng-model="widget.allowed"></span>
-                    </li>
-                  </ul>
-                </li>
-                <!-- <li class="project-name"><span>{{dashboard.title}}</span></li> -->
-                <!-- <li class="project-hours"><span>logged hours: {{dashboard.hours}}</span></li> -->
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Search" ng-model="project_id">
-                    </div>
-                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                </form>
-            </ul>
+<div ng-controller="DashboardCtrl">
+  <link rel="stylesheet" ng-href="{{ styleUrl }}" />    
+  <div class="navbar navbar-inverse">
+      <ul class="nav navbar-nav navbar-left">
+        <div class="choise-select">
+          <span>Release</span>
+          <select class="selectpicker">
+            <option>Mustard</option>
+            <option>Ketchup</option>
+            <option>Relish</option>
+          </select>
         </div>
+        <div class="choise-select">
+          <span>Sprint</span>
+          <select class="selectpicker">
+            <option>Mustard</option>
+            <option>Ketchup</option>
+            <option>Relish</option>
+          </select>
+        </div>
+        <a href="#">Scrummer</a>
+      </ul>
+  </div>
 
-<div class="page-header">
-    <!-- <a class="pull-right btn btn-primary" ng-click="addWidget()"><i class="glyphicon glyphicon-plus"></i> Add Widget</a> -->
-    <!-- <a class="pull-right btn btn-warning" ng-click="clear()"><i class="glyphicon glyphicon-trash"></i> Clear</a> -->
-</div>
+  <div class="page-header">
+    <div class="col-headers col-lg-3 col-md-3 col-xs-3">
+      <span>Defined</span>
+    </div>
+    <div class="col-headers col-lg-3 col-md-3 col-xs-3">
+      <span>Inprogress</span>
+    </div>
+    <div class="col-headers col-lg-3 col-md-3 col-xs-3">
+      <span>Complete</span>
+    </div>
+    <div class="col-headers col-lg-3 col-md-3 col-xs-3">
+      <span>Accepted</span>
+    </div>
+  </div>
 <div gridster="gridsterOptions">
     <div ng-model="widgets">
         <ul>
             <li gridster-item="widget" ng-repeat="widget in widgets | filter: {allowed: true}">
-                <div class="box" ng-controller="CustomWidgetCtrl">
+                <div class="box column-box" ng-controller="CustomWidgetCtrl">
                     <div class="box-header">
                         <section>
                             <h3>{{widget.title}}</h3>
