--- a/public/views/templates/login.html
+++ b/public/views/templates/login.html
@@ -1,4 +1,4 @@
-  <div class="box" ng-controller="AuthCtrl">
+  <div class="box">
         <input type="text" placeholder="username" ng-model="username"><br>
         <input type="password" placeholder="password" ng-model="password"><br>
         <button ng-click="login()">LOGIN</button>
