--- a/public/views/templates/edit_card.html
+++ b/public/views/templates/edit_card.html
@@ -1,44 +1,103 @@
-<div>
-    <!--<form editable-form name="_form" class="form-horizontal" ng-submit="submit(_form)"> -->
-        <div class="modal-header">
-            <button type="button" class="close" ng-click="dismiss()" aria-hidden="true">&times;</button>
-            <i class="fa fa-desktop fa-4" style="float: left;margin-right: 10px;margin-top: 9px;"></i>
-            <!-- <h5 style="float: left;margin-right: 5px;">  {{card.title}}</h5> -->
-            <span><a href="#" onaftersave="updateTask(card)" editable-text="card.subject">{{ card.subject}}</a></span>
-
-            <h6> in list <b>{{widget.title}}</b></h6>
-            <span>estimate size: <a href="#" onaftersave="updateTask(card)" editable-select="card.estimated_size" e-ng-options="s  for s in estimateSizes">
-                {{ card.estimated_size || 'Not set'}}</a>
-            </span><br>
-            <img style="width: 50%; height: 50%; " ng-src="{{getImageLink(card)}}" />
+<div class="modal-content">
+    <div class="modal-header">
+        <button type="button" class="close" ng-click="dismiss()" aria-hidden="true">&times;</button>
+        <span><a href="#" onaftersave="updateTask(card)" editable-text="card.subject">{{card.subject}}</a></span>
+        <!--<img style="width: 50%; height: 50%; " ng-src="{{getImageLink(card)}}" />-->
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="userstory-edit-img">
+                    <img class="member" title="{{card.assigned_to.firstname}} {{card.assigned_to.lastname}}" gravatar-src="'{{card.assigned_to.mail}}'" gravatar-size="100" />
+                </div>
+                <p><b>Added by: </b> {{card.assigned_to.firstname}} {{card.assigned_to.lastname}}</p>
+                <p><b>From: </b> {{card.created_on}}</p>
+                <p><b>Updated: </b> {{card.updated_on}}</p>
+            </div>
         </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Description: </b>{{card.description || 'Not set'}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Priority: </b> {{card.priority.name || 'Not set'}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Assignee: </b> {{card.assigned_to.firstname}}  {{card.assigned_to.lastname}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Story-Size: </b> {{storySize}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Business value: </b> {{businessValue}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Start date: </b> {{card.start_date}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Progress: </b> {{progress}}%</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Done: </b>{{card.done_ratio}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>Release: </b>{{release}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">
+                <p><b>estimate hours: </b>{{card.estimated_hours || 'Not set'}}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="modal-row col-lg-12">    
+                <div>
+                    <p><b>Attachments: </b></p><div ng-file-drop="" ng-file-select="" ng-model="files" ng-model-rejected="rejFiles" drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}" class="drop-box" ng-multiple="true" allow-dir="true">
+                    Drop or select files
+                    </div>
+                    <div ng-no-file-drop="" class="drop-box">File Farg&amp;Drop not supported on your browser</div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 modal-row">
+              <span ng-repeat="attach in card.attachments track by $index">
+                <a href="{{attach.content_url}}" target="_blank">{{attach.filename}}</a>
+                 <a confirmed-click="deleteAttachment(attach.id, $index)" ng-confirm-click="Are you sure about deleting this attachment?">
+                    <i class="fa fa-remove"></i>
+                </a>
+                <br>
+              </span>
+            </div>
+        </div>
+    </div>
+</div>
 
-        <div class="modal-body">
+     
+<!--<div class="modal-body">
             <div class="row">
                 <div class="col-lg-9 col-md-9">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-3">
-                            <img class="member" title="{{card.assigned_to.firstname}} {{card.assigned_to.lastname}}"
-                                     gravatar-src="'{{card.assigned_to.mail}}'" gravatar-size="100" />
-
-                        </div>
-                    </div>
-                    <a><i class="fa fa-edit"></i>  Edit the description</a>
                     </br>
                     <div style="margin-top: 20px;">
-                        <div>
-                            <span ng-repeat="attach in card.attachments track by $index">
-                                <a href="{{attach.content_url}}" target="_blank">{{attach.filename}}</a>
-                                 <a confirmed-click="deleteAttachment(attach.id, $index)" ng-confirm-click="Are you sure about deleting this attachment?">
-                                    <i class="fa fa-remove"></i>
-                                </a>
-                                <br>
-                            </span>
-                        </div>
-                        <div>
-                            <i class="fa fa-tasks">  Tasks</i>
-                        </div>
-                        <progressbar animate="false" value="20" type="success"><b>{{progress}}%</b></progressbar>
+                        
+                       
                         <div style="margin-top: 10px;">
                             <div ng-show="dropAreaState" ng-file-drop="" ng-file-select="" ng-model="files" ng-model-rejected="rejFiles" drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}" class="drop-box" ng-multiple="true" allow-dir="true">
                                 Drop Images or PDFs<div>or click to select</div>
@@ -83,22 +142,15 @@
                             </ul>
                     </div>
                     </br>
-                    <div class="row">
-                        <h4><b>Actions</b></h4>
-                        <ul class="btn-task-info">
-                            <li><button type="button" class="btn btn-primary"><i class="fa fa-arrow-right"></i>  Move</button></li>
-                            <li><button type="button" class="btn btn-info"><i class="fa fa-files-o"></i>  Copy</button></li>
-                            <li><button type="button" class="btn btn-danger"><i class="fa fa-archive"></i>  Archive</button></li>
-                        </ul>
-                    </div>
                 </div>
                 
             </div>
         </div>
 
-        <!--<div class="modal-footer">
+        <div class="modal-footer">
             <a ng-click="dismiss()" class="btn btn-default" tabindex="-1"><i class="glyphicon glyphicon-remove"></i>Cancel</a>
             <button type="submit" class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-ok"></i>Save</button>
         </div>
-    </form>-->
+    </form>
 </div>
+-->
