[add] subtask details model

--- a/public/views/templates/edit_card.html
+++ b/public/views/templates/edit_card.html
@@ -10,7 +10,7 @@
                 <div class="userstory-edit-img">
                     <img class="member" title="{{card.assigned_to.firstname}} {{card.assigned_to.lastname}}" gravatar-src="'{{card.assigned_to.mail}}'" gravatar-size="100" />
                 </div>
-                <p><b>Added by: </b> {{card.assigned_to.firstname}} {{card.assigned_to.lastname}}</p>
+                <p><b>Added by: </b> {{card.author.name}}</p>
                 <p><b>From: </b> {{card.created_on}}</p>
                 <p><b>Updated: </b> {{card.updated_on}}</p>
             </div>
