--- a/public/views/templates/home.html
+++ b/public/views/templates/home.html
@@ -58,13 +58,85 @@
                                 <a ng-href="http://{{config.host}}/issues/{{card.id}}" target="_blank" class="id">{{card.id}}</a>
                                 <h5>{{card.subject}}</h5>
                               </div>
-                              <accordion close-others="oneAtATime"><accordion-group> <accordion-heading> <i  id="accord-{{card.id}}" ng-hide="false" href="#" class=""> </accordion-heading>asd</accordion-group></accordion>
+                              <accordion close-others="oneAtATime"><accordion-group> <accordion-heading> <i id="accord-{{card.id}}" ng-hide="false" href="#" class=""> </accordion-heading>
+
+                              <div ng-repeat="task in card.subTasks track by $index" class="task-component">
+                                <div class="task-line">
+                                  <div class="task-line-info">
+                                    <input class="pull-left" type="checkbox" ng-click="changeTaskStatus(card, task, status_val)" ng-model="status_val" ng-checked="task.status.id == 14">
+                                    <a target="_blank" href="http://{{config.host}}/issues/{{task.id}}" class="id">{{task.id}}</a>
+                                    <p>{{task.subject}}</p>
+                                  </div>
+                                  <div class="related-task-image">
+                                    <img class="member" title="{{task.assigned_to.name}}" gravatar-src="'{{task.assigned_to.mail}}'" gravatar-size="100" />
+                                  </div>
+                                </div>
+                                <div class="related-task-icons">
+                                  <ul>
+                                    <li><a href="" data-toggle="modal" data-target="#relatedTask-modal"><i class="fa fa-arrows-alt"></i></li>
+                                        <div class="modal fade" id="relatedTask-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                          <div class="modal-dialog">
+                                            <div class="modal-content">
+                                              <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                <h4 class="modal-title" id="myModalLabel">{{task.subject}}</h4>
+                                              </div>
+                                              <div class="modal-body">
+
+                                                <div class="row">
+                                                  <div class="col-lg-12">
+                                                    <div class="userstory-edit-img">
+                                                       <img class="member" title="{{task.assigned_to.name}}" gravatar-src="'{{task.assigned_to.mail}}'" gravatar-size="100" />
+                                                    </div>
+                                                    <p><b>Added by: </b>{{task.author.name}}</p>
+                                                    <p><b>From: </b>{{task.created_on}}</p>
+                                                    <p><b>Updated: </b>{{task.updated_on}}</p>
+                                                  </div>
+                                                </div>
+                                               
+                                                
+                                                <div class="row">
+                                                  <div class="modal-row col-lg-12">
+                                                    <p><b>Description: </b>{{task.description}} </p>
+                                                  </div>
+                                                </div>
+                                                <div class="row">
+                                                  <div class="modal-row col-lg-12">
+                                                    <p><b>Status: </b>{{task.status.name}} </p>
+                                                  </div>
+                                                </div>
+                                                <div class="row">
+                                                  <div class="modal-row col-lg-12">
+                                                    <p><b>Priority: </b>{{task.priority.name || 'Not set'}} </p>
+                                                  </div>
+                                                </div>
+                                                <div class="row">
+                                                  <div class="modal-row col-lg-12">
+                                                    <p><b>Assignee: </b>{{task.assigned_to.name}}</p>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                              <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                    <li><i class="fa fa-wrench"></i></li>
+                                    <li><i class="fa fa-question"></i></li>
+                                    <li><a href="#" confirmed-click="deleteTask(task)" ng-confirm-click="Are you sure about deleting this task?"></a><i class="fa fa-trash-o"></i></li>
+                                  </ul>
+                                </div>
+                                
+                              </div>
+                              </accordion-group></accordion>
                               <div class="card-footer">
                                 <div class="task-user">
                                   <div class="task-user-img">
-                                   <img class="us-member member" title="{{card.assigned_to.firstname}} {{card.assigned_to.lastname}}" gravatar-src="card.assigned_to.mail" gravatar-size="100" />
+                                   <img class="us-member member" title="{{card.assigned_to.name}}" gravatar-src="card.assigned_to.mail" gravatar-size="100" />
                                   </div>
-                                    <span>{{card.assigned_to.firstname}} {{card.assigned_to.lastname}}</span>
+                                    <span>{{card.assigned_to.name}}</span>
                                 </div>
 
                                 <div class="card-btns">
@@ -72,7 +144,7 @@
                                     <li ng-show="card.hasAttachments" ><a href="#" class=""><i class="fa fa-paperclip"></i></a></li>
                                     <li><a href="#" ng-click="editCard(widget, card)" class="" data-toggle="modal" data-target="#userStoryModal"><i class="fa fa-arrows-alt"></i></a></li>
                                     <li>
-                                   <a href="#" ng-click="showCardAccordion(card.id)" class="toggle-btn"><i class="fa fa-arrows-v"></i></a
+                                   <a href="#" ng-click="showCardAccordion(card)" class="toggle-btn"><i class="fa fa-arrows-v"></i></a
                                     </li>
                                     </ul>
                                 </div>
