1) added max-hight to subtasks panel, 2) fixed subtask modal, 3) fixed subtask icons actions

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -382,6 +382,8 @@ input {
 
 .panel-group {
     margin-bottom: 0 !important;
+    max-height: 300px;
+    overflow-y: auto;
 }
 
 .panel-heading {
