--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -396,3 +396,32 @@ input {
     background-color: transparent !important;
     border: none !important;
 }
+
+/* Googlish scroll bars (works only in webkit based broswers, chrome/safari) */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #FFF;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.1);
+}
+
+::-webkit-scrollbar-track:hover {
+    border: 1px solid #ddd;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #CCC;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.2);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #AAA;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: #888;
+    -webkit-box-shadow: inset 1px 1px 2px rgba(0,0,0,0.3);
+}
